# rtmmcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/rtmmcp/: __init__.py  config.py  rtm_api.py  server.py
tests/: test_rtm_api.py
